Changes to the p4java library to make it a bit more java 6-ish.